--- a/src/index.scss
+++ b/src/index.scss
@@ -119,10 +119,16 @@ header{
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 30px;
 
+  .items{
+    overflow: auto;
+    margin-bottom: 40px;
+  }
+
   h2{
     margin: 0;
     font-size: 24px;
   }
+ 
 
 }
 .cartTotalBlock{
