--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -5,7 +5,10 @@
     border-radius: 40px;
     margin-right: 30px;
     transition: box-shadow .2s ease-in-out, transform .2s ease-in-out;
-    cursor: pointer;
+    
+    .plus{
+      cursor: pointer;
+    }
   
     &:hover{
   
