--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -2,6 +2,7 @@
     border: 1px solid #F8F8F8;
     padding: 30px;
     width: 220px;
+    margin-top: 30px;
     border-radius: 40px;
     margin-right: 30px;
     transition: box-shadow .2s ease-in-out, transform .2s ease-in-out;
