--- a/src/components/App/Product/style.scss
+++ b/src/components/App/Product/style.scss
@@ -1,3 +1,4 @@
+@import "./../vars";
 .product {
     display: grid;
     grid-template-columns: 2fr repeat(3, 3fr) 1fr;
@@ -10,12 +11,12 @@
     font-size: 18px;
     line-height: 1.3;
 
-    // @media (max-width: $mobile) {
-    //     grid-template-columns: repeat(6, 1fr);
-    //     grid-auto-rows: minmax(60px, auto);
-    //     column-gap: 15px;
-    //     row-gap: 10px;
-    // }
+    @media (max-width: $mobile) {
+        grid-template-columns: repeat(6, 1fr);
+        grid-auto-rows: minmax(60px, auto);
+        column-gap: 15px;
+        row-gap: 10px;
+    }
 }
 
 .product > * {
